--- a/Views/Tablero/index.cshtml
+++ b/Views/Tablero/index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Tableros";
 }
 
-
+@using EspacioTareas
 @model List<Tablero> //Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
 
 <h2>Tablero List</h2>
