--- a/Views/Usuario/AgregarUsuario.cshtml
+++ b/Views/Usuario/AgregarUsuario.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Agregar Usuario";
 }
 
+@using EspacioTareas
 @model EspacioTareas.Usuario
+
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Usuario" asp-action="AgregarUsuarioFromForm" method="post">
