--- a/Views/Usuario/EditarUsuario.cshtml
+++ b/Views/Usuario/EditarUsuario.cshtml
@@ -3,15 +3,29 @@
 }
 
 @using EspacioTareas
-@model EspacioTareas.Usuario
-
+@model Tp11.ViewModels.UsuarioViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Usuario" asp-action="EditarUsuarioFromForm" method="post">
     <input hidden asp-for="@Model.Id">
     <div class="form-group">
-        <label asp-for="@Model.Nombre">Nombre</label>
+        <label asp-for="@Model.Nombre"></label>
         <input asp-for="@Model.Nombre" class="form-control" id="nombre" />
+        <span asp-validation-for="@Model.Nombre" class="text-danger"></span> 
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
+    <div class="form-group">
+        <label asp-for="@Model.Contrasenia"></label>
+        <input asp-for="@Model.Contrasenia" class="form-control" id="contrasenia" />
+        <span asp-validation-for="@Model.Contrasenia" class="text-danger"></span>   
+    </div>
+    <div class="form-group">
+        <label asp-for="@Model.Rol"></label>
+        <select asp-for="@Model.Rol" asp-items="Html.GetEnumSelectList<Rol>()" class="form-control">
+            <option value="">Seleccionar Nivel</option>
+        </select>
+        <span asp-validation-for="@Model.Rol" class="text-danger"></span> 
+    </div>
+    <button type="submit" class="btn btn-primary" >Enviar</button>
 </form>
+
+@section Scripts { <partial name="_ValidationScriptsPartial" /> }
