--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Usuarios";
 }
 
-@using EspacioTareas
-@model List<EspacioTareas.Usuario>
+@using Tp11.ViewModels
+@model List<ListarUsuarioViewModel>
 
 <h2>Lista Usuarios</h2>
 
