correcion de namespace y querys, agregado de comprobacion de login

--- a/Views/Tablero/editarTablero.cshtml
+++ b/Views/Tablero/editarTablero.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Editar Tablero";
 }
 
-@using EspacioTareas
-@model EspacioTareas.Tablero
+@using tp10.Models
+@model tp10.Models.Tablero
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tablero" asp-action="EditarTableroFromForm" method="post">
