--- a/Views/Tarea/Index.cshtml
+++ b/Views/Tarea/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Tareas";
 }
 
-@using EspacioTareas
-@model List<EspacioTareas.Tarea>
+@using tp10.Models
+@model List<tp10.Models.Tarea>
 
 <h2>Tarea List</h2>
 
