--- a/Views/Tarea/EditarTarea.cshtml
+++ b/Views/Tarea/EditarTarea.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Editar Tarea";
 }
 
-@using EspacioTareas
-@model EspacioTareas.Tarea
+@using tp10.Models
+@model tp10.Models.Tarea
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tarea" asp-action="EditarTareaFromForm" method="post">
