--- a/Views/Usuario/AgregarUsuario.cshtml
+++ b/Views/Usuario/AgregarUsuario.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Agregar Usuario";
 }
 
-@using EspacioTareas
+@using tp10.Models
 @model Tp11.ViewModels.UsuarioViewModel
 
 <h1>@ViewData["Title"]</h1>
