--- a/Views/Usuario/EliminarUsuario.cshtml
+++ b/Views/Usuario/EliminarUsuario.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Eliminar Usuario";
 }
 
-@using EspacioTareas
+@using tp10.Models
 @model Tp11.ViewModels.UsuarioViewModel
 <h2>Confirmar eliminación</h2>
 
