correcion de layout y endpoints donde faltaba el ViewModel

--- a/Views/Tablero/editarTablero.cshtml
+++ b/Views/Tablero/editarTablero.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Editar Tablero";
 }
 
-@using tp10.Models
-@model tp10.Models.Tablero
+@using Tp11.ViewModels
+@model TableroViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tablero" asp-action="EditarTableroFromForm" method="post">
