--- a/Views/Tablero/index.cshtml
+++ b/Views/Tablero/index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Tableros";
 }
 
-@using tp10.Models
-@model List<Tablero> //Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
+@using Tp11.ViewModels
+@model List<TableroViewModel> //Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
 
 <h2>Tablero List</h2>
 
