--- a/Views/Tarea/AgregarTarea.cshtml
+++ b/Views/Tarea/AgregarTarea.cshtml
@@ -1,9 +1,8 @@
 @{ 
     ViewData["Title"] = "Agregar Tarea";
 }
-
-@using tp10.Models
-@model tp10.Models.Tarea
+@using Tp11.ViewModels
+@model TareaViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tarea" asp-action="AgregarTareaFromForm" method="post">
@@ -39,3 +38,5 @@
     </div>
     <button type="submit" class="btn btn-primary" >Enviar</button>
 </form>
+
+@section Scripts { <partial name="_ValidationScriptsPartial" /> }
