--- a/Views/Usuario/EditarUsuario.cshtml
+++ b/Views/Usuario/EditarUsuario.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Editar Usuario";
 }
 
-@using tp10.Models
-@model Tp11.ViewModels.UsuarioViewModel
+@using Tp11.ViewModels
+@model UsuarioViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Usuario" asp-action="EditarUsuarioFromForm" method="post">
