--- a/Views/Tablero/index.cshtml
+++ b/Views/Tablero/index.cshtml
@@ -3,12 +3,30 @@
 }
 
 @using Tp11.ViewModels
-@model List<TableroViewModel> //Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
+@using tp10.Models
+@model List<GetTableroViewModel> //Especifico q la view espera un obj de ese tipo, q podre usar con Model o con su nombre original
 
-<h2>Tablero List</h2>
+@{
+    bool isAdmin;
+    if(ViewContext.HttpContext.Session.GetString("Rol") == "administrador"){ 
+        isAdmin = true;
+    } else {
+        isAdmin = false;
+    }
+    int idUsuarioLogueado = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("Id"));
+}
 
-<table class="table table-dark">
-    <thead>
+<table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+        <tr> 
+            @if(isAdmin)
+            {
+                <th colspan="5">Todos los tableros</th>
+            } else
+            {
+                <th colspan="5">Mis tableros / Tableros con tareas</th>
+            }
+        </tr>
         <tr>
             <th hidden>ID</th>
             <th hidden>IdUsuarioPropietario</th>
@@ -19,31 +37,30 @@
         </tr>
     </thead>
     <tbody>
-        @{int idUsuarioLogueado = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("Id"));} 
         @foreach (var tablero in Model) // puedo usar tableros o Model
         {
             <tr>
                 <td hidden>@tablero.Id</td>
                 <td hidden>@tablero.IdUsuarioPropietario</td>
                 <td>@tablero.Nombre</td>
-                <td>@tablero.Descripcion</td>
-                @if(idUsuarioLogueado == tablero.IdUsuarioPropietario){
-                    <td>Si</td>
-                    <td>
-                        <a asp-controller="Tablero" asp-action="EditarTablero" asp-route-idTablero="@tablero.Id">Editar</a>
-                        <a asp-controller="Tablero" asp-action="DeleteTablero" asp-route-idTablero="@tablero.Id" onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">Eliminar</a>                      
-                    </td>
-                } else {
-                    <td>No</td>
-                    <td></td>
-                }
+                <td>@tablero.Descripcion</td>         
+                <td>@(idUsuarioLogueado == tablero.IdUsuarioPropietario ? "Sí" : "No")</td>
+                <td>
+                    @if(idUsuarioLogueado == tablero.IdUsuarioPropietario || isAdmin){
+                            <a class="btn btn-primary" asp-controller="Tablero" asp-action="EditarTablero" asp-route-idTablero="@tablero.Id">Editar</a>
+                            <a class="btn btn-danger" asp-controller="Tablero" asp-action="DeleteTablero" asp-route-idTablero="@tablero.Id" onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">Eliminar</a>                         
+                    }
+                </td>
+                
             </tr>
         }
+        
+
     </tbody>
     <tfoot>
-        <tr>
-            <a asp-controller="Tablero" asp-action="AgregarTablero">Agregar Tablero</a>
-        </tr>
+        <td colspan="4">
+                <a class="btn btn-success" asp-controller="Tablero" asp-action="AgregarTablero" asp-route-id="@idUsuarioLogueado">Agregar Tablero</a>
+        </td>
     </tfoot>
 </table>
 
