--- a/Views/Usuario/AgregarUsuario.cshtml
+++ b/Views/Usuario/AgregarUsuario.cshtml
@@ -3,7 +3,7 @@
 }
 
 @using Tp11.ViewModels
-@model UsuarioViewModel
+@model AddUsuarioViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Usuario" asp-action="AgregarUsuarioFromForm" method="post">
