--- a/Views/Tablero/agregarTablero.cshtml
+++ b/Views/Tablero/agregarTablero.cshtml
@@ -3,7 +3,7 @@
 }
 
 @using Tp11.ViewModels
-@model TableroViewModel //Por el controller mando un objeto AgregarTableroViewModel vacio
+@model AddTableroViewModel //Por el controller mando un objeto AgregarTableroViewModel vacio
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tablero" asp-action="AgregarTableroFromForm" method="post">
