--- a/Views/Tablero/editarTablero.cshtml
+++ b/Views/Tablero/editarTablero.cshtml
@@ -3,7 +3,7 @@
 }
 
 @using Tp11.ViewModels
-@model TableroViewModel
+@model UpdateTableroViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tablero" asp-action="EditarTableroFromForm" method="post">
