--- a/Views/Tarea/EditarTarea.cshtml
+++ b/Views/Tarea/EditarTarea.cshtml
@@ -3,7 +3,7 @@
 }
 
 @using Tp11.ViewModels
-@model TareaViewModel
+@model UpdateTareaViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tarea" asp-action="EditarTareaFromForm" method="post">
