--- a/Views/Tarea/AgregarTarea.cshtml
+++ b/Views/Tarea/AgregarTarea.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Agregar Tarea";
 }
 @using Tp11.ViewModels
-@model TareaViewModel
+@model AddTareaViewModel
 
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tarea" asp-action="AgregarTareaFromForm" method="post">
