--- a/Views/Usuario/EliminarUsuario.cshtml
+++ b/Views/Usuario/EliminarUsuario.cshtml
@@ -6,8 +6,6 @@
 @model EliminarUsuarioViewModel
 <h2>Confirmar eliminación</h2>
 
-<form asp-controller="Usuario" asp-action="EliminarFromFormulario">
-    <input asp-for="@Model.Id" type="hidden" />
-    <button type="submit" class="btn btn-danger" asp-route-idUsuario="@Model.Id">Eliminar</button>
-</form>
+<a class="btn btn-danger" asp-controller="Usuario" asp-action="EliminarFromFormulario" asp-route-idUsuario="@Model.Id">Eliminar</a>                         
+
 @section Scripts { <partial name="_ValidationScriptsPartial" /> }
