--- a/Views/Tarea/Index.cshtml
+++ b/Views/Tarea/Index.cshtml
@@ -5,10 +5,10 @@
 @using Tp11.ViewModels
 @model List<GetTareaViewModel>
 
-<h2>Tarea List</h2>
+<h2>Lista de tareas</h2>
 
-<table class="table table-dark">
-    <thead>
+<table class="table table-striped table-bordered">
+    <thead class="thead-dark">
         <tr>
             <th hidden>ID</th>
             <th>IdTablero</th>
@@ -32,16 +32,16 @@
                 <td>@tarea.Color</td>
                 <td>@tarea.IdUsuarioAsignado</td>
                 <td>
-                    <a asp-controller="Tarea" asp-action="EditarTarea" asp-route-idTarea="@tarea.Id">Editar</a>
-                    <a asp-controller="Tarea" asp-action="DeleteTarea" asp-route-idTarea="@tarea.Id" onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">Eliminar</a>                      
+                    <a class="btn btn-primary" asp-controller="Tarea" asp-action="EditarTarea" asp-route-idTarea="@tarea.Id">Editar</a>
+                    <a class="btn btn-danger"  asp-controller="Tarea" asp-action="DeleteTarea" asp-route-idTarea="@tarea.Id" onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">Eliminar</a>                      
                 </td>
             </tr>
         }
     </tbody>
     <tfoot>
-        <tr>
-            <a asp-controller="Tarea" asp-action="AgregarTarea">Agregar Tarea</a>
-        </tr>
+        <td colspan="4">
+            <a class="btn btn-success" asp-controller="Tarea" asp-action="AgregarTarea">Agregar Tarea</a>
+        </td>
     </tfoot>
 </table>
 
