--- a/Views/Tablero/agregarTablero.cshtml
+++ b/Views/Tablero/agregarTablero.cshtml
@@ -8,6 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tablero" asp-action="AgregarTableroFromForm" method="post">
 @{/*Asigno los datos del formulario a los campos del objeto ViewModel y lo mando al metodo AgregarTableroFromForm*/ }
+    <input hidden asp-for="@Model.IdUsuarioPropietario">
     <div class="form-group">
         <label asp-for="@Model.Nombre"></label>
         <input asp-for="@Model.Nombre" class="form-control" id="nombre" />
