Update en y asignacion en tareas terminado

--- a/Views/Tarea/AsignarTarea.cshtml
+++ b/Views/Tarea/AsignarTarea.cshtml
@@ -7,6 +7,7 @@
 
 <form asp-controller="Tarea" asp-action="AsignarTareaFromForm" method="post">
     <div class="form-group">
+        <input hidden asp-for="@Model.IdTarea">
         <label asp-for="@Model.IdUsuarioAsignado">Asignar a usuario:</label>
         <select asp-for="@Model.IdUsuarioAsignado" class="form-select" id="idTablero">
             @foreach(var usuario in Model.usuarios) { // La tarea pertenecera a algun tablero del usuario
