--- a/Views/Tablero/editarTablero.cshtml
+++ b/Views/Tablero/editarTablero.cshtml
@@ -8,10 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <form asp-controller="Tablero" asp-action="EditarTableroFromForm" method="post">
     <input hidden asp-for="@Model.Id">
-    <div class="form-group">
-        <label asp-for="@Model.IdUsuarioPropietario">Id del usuario propietario</label>
-        <input asp-for="@Model.IdUsuarioPropietario" class="form-control" id="idUsuarioP" />
-    </div>
+    <input hidden asp-for="@Model.IdUsuarioPropietario">
     <div class="form-group">
         <label asp-for="@Model.Nombre">Nombre</label>
         <input asp-for="@Model.Nombre" class="form-control" id="nombre" />
